<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff191919"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dip"
            android:layout_gravity="center" >

            <RelativeLayout
                android:id="@+id/returnback"
                android:layout_width="wrap_content"
                android:layout_height="44dip"
                android:layout_centerVertical="true" >

                <TextView
                    android:id="@+id/head_titile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="5dip"
                    android:layout_marginTop="10dip"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </RelativeLayout>

            <Button
                android:id="@+id/regist"
                android:layout_width="50dip"
                android:layout_height="35dip"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginRight="5dip"
                android:layout_marginTop="4dip"
                android:background="@drawable/login_bright"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/send_current"
                android:layout_width="50dip"
                android:layout_height="25dip"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dip"
                android:layout_marginTop="4dip"
                android:background="@drawable/login_bright"
                android:text="@string/send"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/commint"
                android:layout_width="50dip"
                android:layout_height="35dip"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dip"
                android:layout_marginTop="4dip"
                android:background="@drawable/login_bright"
                android:gravity="center"
                android:text="@string/commint"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>