<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#ff191919"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/usercamephoto"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_gravity="center"
            android:background="@drawable/user_seelect_bg"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/camera_photo"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0.2dp"
            android:background="@color/black" />

        <LinearLayout
            android:id="@+id/userphoto"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_gravity="center"
            android:background="@drawable/user_seelect_bg"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/pitcher"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0.2dp"
            android:background="@color/black" />

        <LinearLayout
            android:id="@+id/cnace"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_gravity="center"
            android:background="@drawable/user_seelect_bg"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/cancle"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>