<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <include layout="@layout/public_head" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#f0f0f0"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dip"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/username"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:layout_weight="3"
                    android:background="@drawable/login_input"
                    android:hint="@string/account"
                    android:maxLength="20"
                    android:paddingLeft="10.0dip"
                    android:textColor="#ff545454"
                    android:textSize="16.0sp" />

      <!--           <ImageView
                    android:id="@+id/delete_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dip"
                    android:visibility="gone"
                    android:contentDescription="@string/action_settings"
                    android:src="@drawable/icon_edit_delete" /> -->
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/password"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:layout_weight="3"
                    android:background="@drawable/login_input"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:paddingLeft="10.0dip"
                    android:textColor="#ff545454"
                    android:textSize="16.0sp" />

      <!--           <ImageView
                    android:id="@+id/delete_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dip"
                    android:visibility="gone"
                    android:contentDescription="@string/action_settings"
                    android:src="@drawable/icon_edit_delete" /> -->
            </LinearLayout>
            
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/nickame"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:layout_weight="3"
                    android:background="@drawable/login_input"
                    android:hint="@string/nickname"
                    android:maxLength="20"
                    android:paddingLeft="10.0dip"
                    android:textColor="#ff545454"
                    android:textSize="16.0sp" />

       <!--          <ImageView
                    android:id="@+id/delete_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dip"
                    android:visibility="gone"
                    android:contentDescription="@string/action_settings"
                    android:src="@drawable/icon_edit_delete" /> -->
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/email"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:layout_weight="3"
                    android:background="@drawable/login_input"
                    android:hint="@string/email"
                    android:maxLength="20"
                    android:paddingLeft="10.0dip"
                    android:textColor="#ff545454"
                    android:textSize="16.0sp" />

            <!--     <ImageView
                    android:id="@+id/delete_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dip"
                    android:visibility="gone"
                    android:src="@drawable/icon_edit_delete" /> -->
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.xabber.android.utils.OntouchBtn
                android:id="@+id/login"
                android:layout_width="fill_parent"
                android:layout_height="44dip"
                android:layout_margin="15dip"
                android:background="@drawable/login_bright"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>